# TicOs

./: .dockerignore  .env.example  .env.prod.example  .firebaserc  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.web  LICENSE  OneProduct_Agent_OS_Analiz_ve_Yol_Haritasi.docx  OneProduct_Pitch_Deck.pptx  PRODUCTION_DEPLOYMENT.md  PRODUCTION_PLAN.md  README.md  START HERE.md  _analysis.txt  backup.env  cloudbuild.yaml  demo_video_senaryo.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  firebase.json  flake.nix  kurulum.md  oneproduct.md  package-lock.json  package.json  playwright.config.ts  restart_backend.ps1  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-mcp/: page-2026-05-14T18-05-21-287Z.yml  page-2026-05-14T18-05-38-175Z.yml  page-2026-05-14T18-05-45-808Z.yml  page-2026-05-14T18-05-51-009Z.yml  page-2026-05-14T18-06-02-396Z.yml  page-2026-05-14T18-06-26-449Z.yml  page-2026-05-14T18-06-35-752Z.yml  page-2026-05-14T18-07-28-024Z.yml  page-2026-05-14T18-07-36-853Z.yml
_unpacked/: [Content_Types].xml
docker/: .env.prod.example  backend.Dockerfile  cloudrun-entrypoint.sh  cloudrun.env.yaml.example  compose.prod.yml  compose.yml  frontend.Dockerfile  nginx.frontend.conf
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
frontend/: .env.example  index.html  landing.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
git/: .gitignore
k8s/: QUICK_START.sh  README.md  deploy.sh  deployment.yaml  (+5 more)
rust/: Cargo.toml
rust/crates/oneproduct-api/: Cargo.toml
rust/crates/oneproduct-api/src/: main.rs
rust/crates/oneproduct-core/: Cargo.toml
rust/crates/oneproduct-core/src/: agent.rs  coordination.rs  decision.rs  error.rs  goals.rs  lib.rs  marketplace.rs  negotiation.rs  ontology.rs
(+663 files in other folders)
