[workspace]
resolver = "2"
members = ["crates/oneproduct-core", "crates/oneproduct-api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5"
rust_decimal = { version = "1", features = ["serde"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
