[package]
name = "oneproduct-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oneproduct-api"
path = "src/main.rs"

[dependencies]
oneproduct-core = { path = "../oneproduct-core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
