[package]
name = "oneproduct-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-agent autonomy primitives: ontology, negotiation, coordination bus, decision engine."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rust_decimal.workspace = true
